--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,1 +1,12 @@
-// Начните писать стили здесь
+//@use "./blocks/mixins-and-variables.scss";
+@use "./blocks/page.scss";
+@use "./blocks/main.scss";
+@use "./blocks/header.scss";
+@use "./blocks/navigation.scss";
+@use "./blocks/promo.scss";
+@use "./blocks/button.scss";
+@use "./blocks/program-selection.scss";
+@use "./blocks/about-product.scss";
+@use "./blocks/use-case.scss";
+@use "./blocks/footer.scss";
+@use "./blocks/contacts.scss";
