Добавляет базовую стилизацию для страницы с формой

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -5,8 +5,11 @@
 @use "./blocks/navigation.scss";
 @use "./blocks/promo.scss";
 @use "./blocks/button.scss";
-@use "./blocks/program-selection.scss";
+@use "./blocks/program-kinds.scss";
 @use "./blocks/about-product.scss";
 @use "./blocks/use-case.scss";
 @use "./blocks/footer.scss";
 @use "./blocks/contacts.scss";
+@use "./blocks/program-selection.scss";
+@use "./blocks/form.scss";
+@use "./blocks/catalog.scss";
