--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -1,5 +1,7 @@
 .button {
   display: block;
+  box-sizing: border-box;
+  width: 100%;
   padding-top: 12px;
   padding-bottom: 12px;
   font-family: "Oswald", sans-serif;
