--- a/source/sass/blocks/main.scss
+++ b/source/sass/blocks/main.scss
@@ -1,3 +1,13 @@
+.main__title {
+  margin: 27px auto 37px auto;
+  padding: 0 20px;
+  font-family: "Oswald", sans-serif;
+  color: #000000;
+  font-size: 36px;
+  line-height: 1em;
+  font-weight: 400;
+}
+
 .main__title-secondary {
   box-sizing: border-box;
   min-width: 320px;
@@ -9,4 +19,12 @@
   font-size: 36px;
   line-height: 1.11em;
   font-weight: 400;
+}
+
+.main__text {
+  margin-bottom: 15px;
+  padding: 0 20px;
+  font-family: "Oswald", sans-serif;
+  color: #000000;
+  text-transform: uppercase;
 }
