--- a/source/sass/blocks/page.scss
+++ b/source/sass/blocks/page.scss
@@ -45,3 +45,12 @@ img {
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
+
+.page-title-secondary {
+  margin-top: 0;
+  margin-bottom: 0;
+  font-family: "Oswald", sans-serif;
+  color: #000000;
+  font-size: 24px;
+  line-height: 1.08em;
+}
