--- a/source/sass/blocks/program-selection.scss
+++ b/source/sass/blocks/program-selection.scss
@@ -1,89 +1,5 @@
-.program-selection__wrapper {
+.program-selection {
   box-sizing: border-box;
   min-width: 320px;
   margin: 0 auto;
-  padding: 0 20px;
-}
-
-.program-selection__list {
-  margin: 0;
-  padding: 0;
-  list-style-type: none;
-}
-
-.program-selection__item {
-  margin-bottom: 20px;
-  padding: 30px 20px 18px 20px;
-  background-color: #f2f2f2;
-}
-
-.program-selection__title {
-  position: relative;
-  margin-top: 0;
-  margin-bottom: 29px;
-  padding-left: 69px;
-  font-family: "Oswald", sans-serif;
-  color: #000000;
-  font-size: 24px;
-  line-height: 1.54em;
-  font-weight: 400;
-  text-transform: uppercase;
-
-  &::before {
-    position: absolute;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    margin: auto 0;
-    content: "";
-    background-repeat: no-repeat;
-  }
-
-  &--weight-loss::before {
-    width: 50px;
-    height: 53px;
-    background-image: url("../img/icons/cat-slim.svg");
-    background-size: 50px 53px;
-  }
-
-  &--weight-gain::before {
-    left: -8px;
-    width: 67px;
-    height: 50px;
-    background-image: url("../img/icons/cat-gain.svg");
-    background-size: 67px 50px;
-  }
-}
-
-.program-selection__description {
-  margin-top: 0;
-  margin-bottom: 15px;
-  padding-bottom: 23px;
-  border-bottom: 1px solid #d9d9d9;
-}
-
-.program-selection__link {
-  position: relative;
-  display: inline-block;
-  padding: 4px 49px 4px 0;
-  font-family: "Oswald", sans-serif;
-  color: #000000;
-  font-size: 16px;
-  line-height: 1em;
-  text-transform: uppercase;
-  text-decoration: none;
-
-  &::after {
-    position: absolute;
-    right: 0;
-    top: 0;
-    bottom: 0;
-    margin: auto 0;
-    width: 32px;
-    height: 10px;
-    content: "";
-    background-image: url("../img/icons/arrow.svg");
-    background-size: 32px 10px;
-    background-repeat: no-repeat;
-  }
 }
