--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -14,4 +14,11 @@
   background-color: #68b738;
   border: none;
   cursor: pointer;
+
+  &--secondary {
+    font-size: 16px;
+    line-height: 1.25em;
+    color: #444444;
+    background-color: #f2f2f2;
+  }
 }
