--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -6,8 +6,12 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding-top: 26px;
-  padding-bottom: 26px;
+  padding: 26px 20px;
+  background-color: #f2f2f2;
+
+  &--main {
+    background-color: #ffffff;
+  }
 }
 
 .contacts__invitation {
