--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -12,20 +12,51 @@
   &--main {
     background-color: #ffffff;
   }
+
+  @media (min-width: 768px) {
+    padding: 56px 70px;
+  }
+
+  @media (min-width: 1440px) {
+    width: 565px;
+    padding: 56px 80px;
+    background-color: #ffffff;
+  }
 }
 
 .contacts__invitation {
+  width: 139px;
   margin-top: 0;
   margin-bottom: 0;
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", "Arial", sans-serif;
   color: #000000;
   font-size: 16px;
-  line-height: 1.2em;
+  line-height: 1.25;
   text-transform: uppercase;
+
+  @media (min-width: 768px) {
+    width: 172px;
+    font-size: 20px;
+    line-height: 1.3;
+  }
+
+  @media (min-width: 1440px) {
+    width: 163px;
+  }
 }
 
 .contacts__information {
+  width: 139px;
   margin-top: 0;
   margin-bottom: 0;
-  line-height: 1.4em;
+  line-height: 1.4;
+
+  @media (min-width: 768px) {
+    width: 160px;
+    line-height: 1.25;
+  }
+
+  @media (min-width: 1440px) {
+    width: 155px;
+  }
 }
