--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -8,12 +8,29 @@
   min-width: 320px;
   margin: 0 auto;
 }
+
 .footer__wrapper {
   padding: 0 20px;
+
+  @media (min-width: 768px) {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 30px;
+  }
+
+  @media (min-width: 1440px) {
+    padding: 0 110px;
+  }
 }
 
 .footer__logo {
   border-bottom: 1px solid #d9d9d9;
+
+  @media (min-width: 768px) {
+    margin-right: 106px;
+    border: none;
+  }
 }
 
 .footer__logo-link {
@@ -27,16 +44,19 @@
   padding-top: 20px;
   padding-bottom: 21px;
   border-bottom: 1px solid #d9d9d9;
+
+  @media (min-width: 768px) {
+    flex-grow: 1;
+    margin-right: 50px;
+    border: none;
+  }
 }
 
 .footer__social-list {
   display: grid;
-  grid-template-columns: repeat(auto);
+  grid-template-columns: repeat(auto-fit, 28px);
+  justify-content: center;
   grid-gap: 24px;
-  margin: 0 auto;
-}
-
-.footer__social-link {
 }
 
 .footer__copyright {
@@ -44,11 +64,17 @@
   justify-content: space-between;
   align-items: center;
   padding: 22px 0;
+
+  @media (min-width: 768px) {
+    justify-content: flex-end;
+    border: none;
+  }
 }
 
 .footer__copyright-title {
+  margin-right: 22px;
   color: #444444;
   font-size: 16px;
-  line-height: 1.1em;
+  line-height: 1.15;
   text-decoration: none;
 }
