--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -1,9 +1,182 @@
 .header {
-  font-family: "Oswald", sans-serif;
+  min-width: 320px;
+  font-family: "Oswald", "Arial", sans-serif;
   font-weight: 400;
-  font-size: 20px;
-  line-height: 1em;
   color: #000000;
+}
+
+.header--main {
+  @media (min-width: 1440px) {
+    position: relative;
+    box-sizing: border-box;
+    width: 1440px;
+    min-height: 694px;
+    padding-left: 110px;
+    padding-right: 110px;
+
+    &::before {
+      position: absolute;
+      top: 0;
+      right: 0;
+      z-index: 1;
+      width: 720px;
+      height: 694px;
+      content: "";
+      background-image:
+        linear-gradient(rgba(104, 183, 56, 0.85), rgba(104, 183, 56, 0.85)),
+        url("../img/promo-cat-desktop.jpg");
+      background-size: 720px 694px;
+      background-repeat: no-repeat;
+    }
+
+    &::after {
+      position: absolute;
+      top: 141px;
+      right: 330px;
+      z-index: 2;
+      width: 552px;
+      height: 499px;
+      content: "";
+      background: url("../img/promo-food-desktop.png");
+      background-size: 552px 499px;
+      background-repeat: no-repeat;
+    }
+  }
+}
+
+.header__navigation {
+  @media (max-width: 767px) {
+    margin-right: 20px;
+    margin-left: 20px;
+  }
+
+  @media (min-width: 768px) {
+    margin-right: 30px;
+    margin-left: 30px;
+  }
+
+  @media (min-width: 1440px) {
+    z-index: 2;
+    margin-right: 0;
+    margin-left: 0;
+  }
+}
+
+.header__promo {
+  font-size: 14px;
+  line-height: 1;
+
+  @media (max-width: 767px) {
+    display: grid;
+    grid-template-rows: auto auto 135px 135px auto;
+    grid-template-columns: 20px auto 20px;
+    text-align: center;
+    color: #ffffff;
+
+    &::before {
+      grid-row: 1 / 4;
+      grid-column: 1 / -1;
+      z-index: 1;
+      content: "";
+      background-image:
+        linear-gradient(rgba(104, 183, 56, 0.85), rgba(104, 183, 56, 0.85)),
+        url("../img/promo-cat.jpg"),
+        linear-gradient(to right, #504f55, #444348);
+      background-size:
+        100% 302px,
+        320px 302px,
+        100% 302px;
+      background-repeat: no-repeat;
+      background-position: top center;
+    }
+
+    &::after {
+      grid-row: 3 / 5;
+      grid-column: 2 / 3;
+      z-index: 2;
+      align-self: end;
+      justify-self: center;
+      width: 280px;
+      height: 270px;
+      content: "";
+      background: url("../img/promo-food.png");
+      background-size: 280px 270px;
+      background-repeat: no-repeat;
+    }
+  }
+
+  @media (min-width: 768px) {
+    padding: 62px 30px 526px 117px;
+    background-image: url("../img/promo-food-tablet.png");
+    background-size: 709px 609px;
+    background-repeat: no-repeat;
+    background-position: bottom 0 right 30px;
+  }
+
+  @media (min-width: 1440px) {
+    padding: 114px 720px 0 80px;
+    background-image: none;
+  }
+}
+
+.header__promo-title {
+  font-size: 36px;
+  line-height: 1em;
+  font-weight: 400;
+
+  @media (max-width: 767px) {
+    grid-row: 1 / 2;
+    grid-column: 2 / 3;
+    z-index: 3;
+    margin-top: 27px;
+    margin-bottom: 25px;
+  }
+
+  @media (min-width: 768px) {
+    margin-top: 0;
+    margin-bottom: 41px;
+    font-size: 60px;
+  }
+}
+
+.header__promo-tagline {
+  text-transform: uppercase;
+
+  @media (max-width: 767px) {
+    grid-row: 2 / 3;
+    grid-column: 2 / 3;
+    z-index: 3;
+    margin-top: 0;
+    margin-bottom: 29px;
+  }
+
+  @media (min-width: 768px) {
+    margin-bottom: 49px;
+    margin-left: 2px;
+    font-size: 20px;
+  }
+
+  @media (min-width: 1440px) {
+    margin-bottom: 52px;
+  }
+}
+
+.header__promo-link {
+  display: inline-block;
+  font-size: 14px;
+  line-height: 1.3;
+
+  @media (max-width: 767px) {
+    grid-row: -1 / -2;
+    grid-column: 2 / 3;
+  }
+
+  @media (min-width: 768px) {
+    margin-left: 3px;
+    padding-top: 14px;
+    padding-bottom: 14px;
+    font-size: 20px;
+  }
 }
 
 .navigation__logo,
