--- a/source/sass/blocks/page.scss
+++ b/source/sass/blocks/page.scss
@@ -1,19 +1,3 @@
-@font-face {
-  font-family: "Oswald";
-  font-style: normal;
-  font-weight: 400;
-  src: url("../fonts/oswaldregular.woff2") format("woff2");
-  font-display: swap;
-}
-
-@font-face {
-  font-family: "Oswald";
-  font-style: normal;
-  font-weight: 500;
-  src: url("../fonts/oswaldmedium.woff2") format("woff2");
-  font-display: swap;
-}
-
 .page {
   height: 100%;
 }
@@ -25,32 +9,12 @@
   margin: 0;
   font-family: "Arial", sans-serif;
   font-size: 14px;
-  line-height: 1.29em;
+  line-height: 1.3;
   color: #444444;
   background-color: #ffffff;
-}
 
-img {
-  max-width: 100%;
-  object-fit: contain;
-}
-
-.visually-hidden {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  padding: 0;
-  border: 0;
-  clip: rect(0 0 0 0);
-  overflow: hidden;
-}
-
-.page-title-secondary {
-  margin-top: 0;
-  margin-bottom: 0;
-  font-family: "Oswald", sans-serif;
-  color: #000000;
-  font-size: 24px;
-  line-height: 1.08em;
+  @media (min-width: 768px) {
+    font-size: 16px;
+    line-height: 1.5;
+  }
 }
