--- a/source/sass/blocks/program-kinds.scss
+++ b/source/sass/blocks/program-kinds.scss
@@ -1,77 +1,186 @@
 .program-kinds__wrapper {
   box-sizing: border-box;
   min-width: 320px;
-  margin: 0 auto;
-  padding: 20px 20px 0 20px;
+  margin-right: auto;
+  margin-left: auto;
+  padding: 20px 20px 10px;
+
+  @media (min-width: 768px) {
+    padding: 0 30px 25px;
+  }
+
+  @media (min-width: 1440px) {
+    padding: 82px 110px 35px;
+  }
 }
 
 .program-kinds__list {
-  margin: 0;
-  padding: 0;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-gap: 20px;
+  margin-top: 0;
+  margin-bottom: 0;
+  padding-left: 0;
   list-style-type: none;
+
+  @media (min-width: 1440px) {
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 80px;
+  }
 }
 
 .program-kinds__item {
-  margin-bottom: 20px;
-  padding: 30px 20px 18px 20px;
+  display: grid;
+  grid-template-rows: repeat(3, auto);
+  grid-template-columns: 60px 1fr;
+  grid-template-areas:
+    "icon title"
+    "text text"
+    "link link";
+  padding: 22px 20px 18px;
   background-color: #f2f2f2;
-}
 
-.program-kinds__title {
-  position: relative;
-  margin-top: 0;
-  margin-bottom: 29px;
-  padding-left: 69px;
-  font-family: "Oswald", sans-serif;
-  color: #000000;
-  font-size: 24px;
-  line-height: 1.54em;
-  font-weight: 400;
-  text-transform: uppercase;
+  @media (min-width: 768px) {
+    grid-template-columns: 1fr 236px;
+    grid-template-areas:
+      "title icon"
+      "text icon"
+      "link icon";
+    padding: 0 62px 0 52px;
+  }
 
-  &::before {
-    position: absolute;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    margin: auto 0;
-    content: "";
-    background-repeat: no-repeat;
+  @media (min-width: 1440px) {
+    grid-template-columns: 116px 1fr;
+    grid-template-areas:
+      "icon title"
+      "text text"
+      "link link";
+    padding: 40px 51px 55px 52px;
   }
 
   &--weight-loss::before {
+    grid-area: icon;
+    align-self: center;
     width: 50px;
     height: 53px;
+    content: "";
     background-image: url("../img/icons/cat-slim.svg");
-    background-size: 50px 53px;
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+
+    @media (min-width: 768px) {
+      justify-self: end;
+      width: 200px;
+      height: 211px;
+    }
+
+    @media (min-width: 1440px) {
+      justify-self: start;
+      width: 100px;
+      height: 106px;
+    }
   }
 
   &--weight-gain::before {
-    left: -8px;
+    position: relative;
+    left: -7px;
+    grid-area: icon;
+    align-self: center;
     width: 67px;
     height: 50px;
+    content: "";
     background-image: url("../img/icons/cat-gain.svg");
-    background-size: 67px 50px;
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+
+    @media (min-width: 768px) {
+      left: 0;
+      width: 268px;
+      height: 200px;
+    }
+
+    @media (min-width: 1440px) {
+      left: -19px;
+      justify-self: start;
+      width: 134px;
+      height: 100px;
+    }
+  }
+}
+
+.program-kinds__title {
+  grid-area: title;
+  align-self: center;
+  margin-top: 0;
+  margin-bottom: 0;
+  margin-left: 12px;
+  font-family: "Oswald", "Arial", sans-serif;
+  color: #000000;
+  font-size: 24px;
+  line-height: 1.5;
+  font-weight: 400;
+  text-transform: uppercase;
+
+  @media (min-width: 768px) {
+    margin-top: 77px;
+    margin-left: 0;
+    font-size: 36px;
+    line-height: 1;
+  }
+
+  @media (min-width: 1440px) {
+    margin-top: 0;
+    margin-left: 47px;
   }
 }
 
 .program-kinds__description {
+  grid-area: text;
   margin-top: 0;
   margin-bottom: 15px;
+  padding-top: 22px;
   padding-bottom: 23px;
   border-bottom: 1px solid #d9d9d9;
+
+  @media (min-width: 768px) {
+    margin-bottom: 0;
+    padding-top: 24px;
+    padding-right: 18px;
+    padding-bottom: 48px;
+    border: none;
+  }
+
+  @media (min-width: 1440px) {
+    padding-top: 39px;
+    padding-right: 0;
+    padding-bottom: 23px;
+  }
 }
 
 .program-kinds__link {
   position: relative;
-  display: inline-block;
+  grid-area: link;
+  justify-self: start;
   padding: 4px 49px 4px 0;
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", "Arial", sans-serif;
   color: #000000;
   font-size: 16px;
-  line-height: 1em;
+  line-height: 1;
   text-transform: uppercase;
   text-decoration: none;
+
+  @media (min-width: 768px) {
+    margin-bottom: 53px;
+    padding: 0;
+    padding-right: 57px;
+    font-size: 20px;
+    line-height: 1.5;
+  }
+
+  @media (min-width: 1440px) {
+    margin-bottom: 0;
+    padding-right: 60px;
+  }
 
   &::after {
     position: absolute;
