Вносит правки в стили страницы формы

--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -36,6 +36,15 @@
   &--addition {
     padding-bottom: 14px;
   }
+
+  @media (min-width: 768px) {
+    padding-right: 70px;
+    padding-left: 70px;
+  }
+
+  @media (min-width: 1440px) {
+
+  }
 }
 
 .form__field-group {
