--- a/source/sass/blocks/main.scss
+++ b/source/sass/blocks/main.scss
@@ -3,13 +3,27 @@
 }
 
 .main__title {
-  margin: 27px auto 37px auto;
+  margin: 27px auto 37px;
   padding: 0 20px;
   font-family: "Oswald", "Arial", sans-serif;
   color: #000000;
   font-size: 36px;
   line-height: 1em;
   font-weight: 400;
+
+  @media (min-width: 768px) {
+    margin: 65px auto 54px;
+    padding-left: 70px;
+    padding-right: 30px;
+    font-size: 60px;
+    line-height: 1;
+  }
+
+  @media (min-width: 1440px) {
+    margin: 73px auto 56px;
+    padding-left: 110px;
+    padding-right: 110px;
+  }
 }
 
 .main__title-secondary {
@@ -21,14 +35,14 @@
   font-family: "Oswald", "Arial", sans-serif;
   color: #000000;
   font-size: 36px;
-  line-height: 1.11em;
+  line-height: 1.1;
   font-weight: 400;
 
   @media (min-width: 768px) {
     margin-bottom: 32px;
     padding: 0 30px;
     font-size: 60px;
-    line-height: 1em;
+    line-height: 1;
   }
 
   @media (min-width: 1440px) {
@@ -37,10 +51,22 @@
 }
 
 .main__text {
-  margin: 0 auto;
-  margin-bottom: 15px;
+  margin: 0 auto 15px;
   padding: 0 20px;
   font-family: "Oswald", "Arial", sans-serif;
   color: #000000;
   text-transform: uppercase;
+
+  @media (min-width: 768px) {
+    margin-bottom: 32px;
+    padding-right: 30px;
+    padding-left: 70px;
+    font-size: 20px;
+    line-height: 1.5;
+  }
+
+  @media (min-width: 1440px) {
+    padding-left: 110px;
+    padding-right: 110px;
+  }
 }
