--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -20,6 +20,9 @@
   }
 
   @media (min-width: 1440px) {
+    width: 1440px;
+    margin-left: auto;
+    margin-right: auto;
     padding: 0 110px;
   }
 }
