--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -3,16 +3,27 @@
   font-family: "Oswald", "Arial", sans-serif;
   font-weight: 400;
   color: #000000;
+  border-bottom: 1px solid #d9d9d9;
+
+  @media (min-width: 768px) {
+    border-bottom: none;
+  }
+
+  @media (min-width: 1440px) {
+    width: 1220px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 110px;
+    padding-right: 110px;
+  }
 }
 
 .header--main {
+  border-bottom: none;
+
   @media (min-width: 1440px) {
     position: relative;
-    box-sizing: border-box;
-    width: 1440px;
     min-height: 694px;
-    padding-left: 110px;
-    padding-right: 110px;
 
     &::before {
       position: absolute;
@@ -46,19 +57,21 @@
 
 .header__navigation {
   @media (max-width: 767px) {
-    margin-right: 20px;
-    margin-left: 20px;
+    padding-right: 20px;
+    padding-left: 20px;
   }
 
   @media (min-width: 768px) {
-    margin-right: 30px;
-    margin-left: 30px;
+    padding-right: 30px;
+    padding-left: 30px;
   }
 
   @media (min-width: 1440px) {
     z-index: 2;
     margin-right: 0;
     margin-left: 0;
+    padding-right: 0;
+    padding-left: 0;
   }
 }
 
