--- a/source/sass/blocks/main.scss
+++ b/source/sass/blocks/main.scss
@@ -1,10 +1,6 @@
-.main {
-  min-width: 320px;
-}
-
 .main__title {
-  margin: 27px auto 37px;
-  padding: 0 20px;
+  margin-top: 0;
+  margin-bottom: 37px;
   font-family: "Oswald", "Arial", sans-serif;
   color: #000000;
   font-size: 36px;
@@ -12,17 +8,14 @@
   font-weight: 400;
 
   @media (min-width: 768px) {
-    margin: 65px auto 54px;
-    padding-left: 70px;
-    padding-right: 30px;
+    margin-bottom: 54px;
+
     font-size: 60px;
     line-height: 1;
   }
 
   @media (min-width: 1440px) {
-    margin: 73px auto 56px;
-    padding-left: 110px;
-    padding-right: 110px;
+    margin-bottom: 56px;
   }
 }
 
@@ -51,22 +44,15 @@
 }
 
 .main__text {
-  margin: 0 auto 15px;
-  padding: 0 20px;
+  margin-top: 0;
+  margin-bottom: 15px;
   font-family: "Oswald", "Arial", sans-serif;
   color: #000000;
   text-transform: uppercase;
 
   @media (min-width: 768px) {
     margin-bottom: 32px;
-    padding-right: 30px;
-    padding-left: 70px;
     font-size: 20px;
     line-height: 1.5;
-  }
-
-  @media (min-width: 1440px) {
-    padding-left: 110px;
-    padding-right: 110px;
   }
 }
