--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -1,3 +1,48 @@
+.catalog {
+  padding: 27px 20px 35px;
+
+  @media (min-width: 768px) {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    column-gap: 60px;
+    padding: 65px 30px 76px;
+  }
+
+  @media (min-width: 1440px) {
+    grid-template-columns: repeat(4, 1fr);
+    column-gap: 80px;
+    width: 1220px;
+    margin-right: auto;
+    margin-left: auto;
+    padding: 74px 110px 86px;
+  }
+}
+
+.catalog__title {
+  @media (min-width: 768px) {
+    grid-column: 1 / -1;
+  }
+}
+
+.catalog__title-secondary {
+  position: relative;
+  justify-self: start;
+  margin: 25px auto 36px auto;
+  font-size: 24px;
+  line-height: 1;
+  font-family: "Oswald", "Arial", sans-serif;
+  color: #000000;
+  font-weight: 400;
+
+  @media (min-width: 768px) {
+    grid-column: 1 / -1;
+    margin: 8px 0 80px;
+    padding-right: 36px;
+    padding-left: 36px;
+    font-size: 36px;
+  }
+}
+
 .catalog__product-card {
   position: relative;
   display: grid;
@@ -15,53 +60,188 @@
       "title title"
       "information information"
       "button button";
+    padding-top: 13px;
+    padding-bottom: 19px;
+    border-bottom: 1px solid #cdcdcd;
+  }
+
+  &::after {
+    position: absolute;
+    bottom: 0;
+    left: -20px;
+    right: 0;
+    width: 100vw;
+    content: "";
+    border-bottom: 1px solid #ebebeb;
+  }
+
+  &:first-of-type::before {
+    position: absolute;
+    top: 0;
+    left: -20px;
+    right: 0;
+    width: 100vw;
+    content: "";
+    border-bottom: 1px solid #ebebeb;
+  }
+
+  &--additional::after {
+    width: 0;
+  }
+
+  &--additional:first-of-type {
+    border-top: 1px solid #ebebeb;
+
+    &::before {
+      width: 0;
+    }
+  }
+
+  @media (min-width: 768px) {
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(3, auto);
+    grid-template-areas:
+      "title"
+      "information"
+      "button";
+    margin-top: 81px;
+    margin-bottom: 60px;
+    padding: 161px 36px 39px;
+    background-color: #f2f2f2;
+
+    &::after {
+      width: 0;
+    }
+
+    &:first-of-type::before {
+      width: 0;
+    }
+
+    &--additional {
+      grid-column: 1 / 3;
+      grid-template-areas:
+        "title information"
+        "button button";
+      grid-template-columns: 1fr auto;
+      margin-top: 0;
+      margin-bottom: 0;
+      padding: 26px 38px 28px;
+      background-color: inherit;
+    }
+  }
+
+  @media (min-width: 1440px) {
+    &--additional {
+      grid-column: 1 / 4;
+      grid-template-areas:
+        "title information button";
+      grid-template-columns: 1fr 286px 244px;
+      grid-template-rows: auto;
+      column-gap: 38px;
+      align-content: start;
+      align-items: center;
+      padding: 13px 0 15px;
+    }
   }
 }
 
 .catalog__image-link {
   grid-area: image;
+  display: grid;
+  justify-self: center;
+  align-self: end;
+
+  @media (min-width: 768px) {
+    position: absolute;
+    top: -73px;
+  }
 }
 
 .catalog__title-link {
   grid-area: title;
+  margin-bottom: 18px;
   color: #222222;
   text-decoration: none;
+
+  @media (min-width: 768px) {
+    margin-bottom: 21px;
+  }
 }
 
-.catalog__button {
-  grid-area: button;
-  margin-top: 13px;
-}
+.catalog__product-card--additional .catalog__title-link {
+  margin-bottom: 13px;
 
-.catalog__product-information {
-  grid-area: information;
-  width: 100%;
-  font-size: 12px;
-  line-height: 1.3em;
-  border-collapse: collapse;
-}
+  @media (min-width: 768px) {
+    justify-self: start;
+  }
 
-.catalog__product-card::after {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  content: "";
-  border-bottom: 1px solid #ebebeb;
-}
-
-.catalog__product-title {
-  margin-top: 0;
-  margin-bottom: 18px;
+  @media (min-width: 1440px) {
+    margin-right: auto;
+    margin-bottom: 0;
+  }
 }
 
 .catalog__product-title,
 .catalog__show-more-title {
+  margin-top: 0;
+  margin-bottom: 0;
   font-family: "Oswald", "Arial", sans-serif;
   font-size: 16px;
   line-height: 1.25em;
   font-weight: 400;
   text-transform: uppercase;
+
+  @media (min-width: 768px) {
+    font-size: 20px;
+    line-height: 1.2;
+    text-align: center;
+  }
+}
+
+.catalog__product-information {
+  grid-area: information;
+  width: 100%;
+  margin-bottom: 9px;
+  font-size: 12px;
+  line-height: 1.3em;
+  border-collapse: collapse;
+
+  @media (min-width: 768px) {
+    margin-bottom: 33px;
+    font-size: 16px;
+    line-height: 1.4;
+  }
+}
+
+.catalog__product-card--additional .catalog__product-information {
+  margin-bottom: 0;
+  font-size: 14px;
+
+  @media (min-width: 768px) {
+    justify-self: end;
+    margin-bottom: 21px;
+    margin-left: auto;
+    font-size: 16px;
+    line-height: 1.4;
+  }
+
+  @media (min-width: 1440px) {
+    min-width: 286px;
+    margin-bottom: 0;
+    text-align: left;
+  }
+}
+
+.catalog__product-information tr {
+  @media (min-width: 768px) {
+    border-bottom: 1px solid #cdcdcd;
+  }
+}
+
+.catalog__product-card--additional tr {
+  @media (min-width: 768px) {
+    border-bottom: none;
+  }
 }
 
 .catalog__product-information th {
@@ -73,6 +253,72 @@
 .catalog__product-information td {
   padding: 0;
   text-align: right;
+}
+
+.catalog__product-card--additional td {
+  @media (min-width: 768px) {
+    min-width: 93px;
+  }
+}
+
+.catalog__product-information th,
+.catalog__product-information td {
+  @media (min-width: 768px) {
+    padding-top: 2px;
+    padding-bottom: 3px;
+  }
+}
+
+.catalog__button {
+  grid-area: button;
+  margin-top: 13px;
+
+  @media (min-width: 768px) {
+    align-self: end;
+    margin-top: auto;
+  }
+}
+
+.catalog__additional-goods {
+  @media (min-width: 768px) {
+    grid-column: 1 / -1;
+    display: grid;
+  }
+
+  @media (min-width: 1440px) {
+    grid-template-columns: repeat(4, 1fr);
+    column-gap: 80px;
+    align-content: start;
+  }
+}
+
+.catalog__more-goods {
+  position: relative;
+  margin-bottom: 50px;
+
+  &::after {
+    position: absolute;
+    bottom: -25px;
+    left: -20px;
+    right: 0;
+    width: 100vw;
+    content: "";
+    border-bottom: 1px solid #ebebeb;
+  }
+
+  @media (min-width: 768px) {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(2, auto);
+    margin-top: 81px;
+    margin-bottom: 60px;
+    padding: 38px;
+    border: 2px solid #f2f2f2;
+
+    &::after {
+      width: 0;
+    }
+  }
 }
 
 .catalog__show-more-link {
@@ -93,8 +339,20 @@
     margin: 0 auto;
     content: "";
     background-image: url("../img/icons/plus.svg");
-    background-size: 30px 30px;
+    background-size: 100% 100%;
     background-repeat: no-repeat;
+  }
+
+  @media (min-width: 768px) {
+    margin-top: 0;
+    padding-top: 123px;
+
+    &::before {
+      top: 14px;
+      width: 60px;
+      height: 60px;
+      background-image: url("../img/icons/plus-big.svg");
+    }
   }
 }
 
@@ -103,6 +361,10 @@
   margin-bottom: 8px;
   color: #111111;
   text-align: center;
+
+  @media (min-width: 768px) {
+    margin-bottom: 23px;
+  }
 }
 
 .catalog__show-more-addition {
@@ -112,46 +374,40 @@
   font-size: 12px;
   line-height: 1.3em;
   text-align: center;
+
+  @media (min-width: 768px) {
+    font-size: 16px;
+    line-height: 1.2;
+  }
 }
 
-.catalog__title-secondary {
-  margin: 25px auto 36px auto;
-  padding: 0 20px;
-  font-size: 24px;
-  line-height: 1em;
-  font-family: "Oswald", "Arial", sans-serif;
-  color: #000000;
-  font-weight: 400;
+.catalog__show-all {
+  margin-top: 13px;
+
+  @media (min-width: 768px) {
+    align-self: grid-end;
+    margin-top: auto;
+  }
 }
 
 .catalog__gift-offer {
   position: relative;
   box-sizing: border-box;
   width: 280px;
-  margin-top: 35px;
-  margin-bottom: 35px;
-  margin-left: auto;
-  margin-right: auto;
+  margin: 35px auto 0;
   padding: 186px 58px 43px 58px;
+  line-height: 1.2;
   text-align: center;
   color: #ffffff;
   background-color: #68b738;
-  background-image: url("../img/order-all.jpg");
+  background-image:
+    linear-gradient(rgba(104, 183, 56, 0.85), rgba(104, 183, 56, 0.85)),
+    url("../img/order-all.jpg");
   background-size: 280px 289px;
   background-repeat: no-repeat;
   background-position: center;
 
   &::before {
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    content: "";
-    background-color: rgba(104, 183, 56, 0.85);
-  }
-
-  &::after {
     position: absolute;
     top: 58px;
     right: 0;
@@ -161,12 +417,45 @@
     margin: 0 auto;
     content: "";
     background-image: url("../img/icons/gift.svg");
-    background-size: 78px 80px;
+    background-size: 100%;
     background-repeat: no-repeat;
+  }
+
+  @media (min-width: 768px) {
+    grid-column: 1 / 3;
+    width: 707px;
+    min-height: 200px;
+    margin: 69px auto 0;
+    padding: 71px 124px 20px 422px;
+    text-align: left;
+    background-image:
+      linear-gradient(rgba(104, 183, 56, 0.85), rgba(104, 183, 56, 0.85)),
+      url("../img/order-all-tablet.jpg");
+    background-size: 100% 200px;
+
+    &::before {
+      top: 57px;
+      left: 77px;
+      width: 80px;
+      height: 82px;
+      margin-right: 0;
+      margin-left: 0;
+    }
+  }
+
+  @media (min-width: 1440px) {
+    grid-column: -1 / -2;
+    grid-row: 2 / 6;
+    align-self: start;
+    width: 245px;
+    min-height: 288px;
+    margin: 0;
+    padding: 184px 41px 42px 43px;
+    text-align: center;
+    background-image:
+      linear-gradient(rgba(104, 183, 56, 0.85), rgba(104, 183, 56, 0.85)),
+      url("../img/order-all.jpg");
+    background-size: 245px 288px;
   }
 }
 
-.catalog__gift-text {
-  position: relative;
-  z-index: 1;
-}
