--- a/source/sass/blocks/navigation.scss
+++ b/source/sass/blocks/navigation.scss
@@ -1,3 +1,5 @@
+
+
 .navigation {
   position: relative;
   display: flex;
@@ -74,10 +76,12 @@
 
 .navigation__list {
   display: none;
-  margin-top: 0;
+
+  @include list-reset;
+  /*margin-top: 0;
   margin-bottom: 0;
   padding-left: 0;
-  list-style-type: none;
+  list-style-type: none;*/
 
   @media (min-width: 768px) {
     display: flex;
