Меняет структуру файлов в папке sass. Добавляет использование переменных в блоке navigation.

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,8 +1,7 @@
-@use "./blocks/mixins-and-variables.scss";
-@use "./blocks/fonts.scss";
-@use "./blocks/visually-hidden.scss";
+@use "fonts.scss";
+@use "visually-hidden.scss";
+@use "base.scss";
 @use "./blocks/page.scss";
-@use "./blocks/base.scss";
 @use "./blocks/button.scss";
 @use "./blocks/main.scss";
 @use "./blocks/header.scss";
