--- a/source/sass/blocks/about-product.scss
+++ b/source/sass/blocks/about-product.scss
@@ -1,10 +1,12 @@
+@use "../variables.scss";
+
 $icon-size: 60px;
 
 .about-product {
   padding-top: 10px;
   padding-bottom: 49px;
 
-  @media (min-width: 768px) {
+  @media (min-width: variables.$tablet-width) {
     padding-top: 20px;
     padding-bottom: 47px;
     border-bottom: 1px solid #e6e6e6;
@@ -25,12 +27,12 @@ $icon-size: 60px;
   padding-right: 20px;
   padding-left: 20px;
 
-  @media (min-width: 768px) {
+  @media (min-width: variables.$tablet-width) {
     padding-right: 30px;
     padding-left: 30px;
   }
 
-  @media (min-width: 1440px) {
+  @media (min-width: variables.$desktop-width) {
     padding-right: 110px;
     padding-left: 110px;
   }
@@ -42,14 +44,14 @@ $icon-size: 60px;
   padding-left: 0;
   list-style-type: none;
 
-  @media (min-width: 768px) {
+  @media (min-width: variables.$tablet-width) {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-gap: 37px 138px;
     padding-right: 79px;
   }
 
-  @media (min-width: 1440px) {
+  @media (min-width: variables.$desktop-width) {
     grid-template-columns: repeat(4, 1fr);
     grid-gap: 37px 94px;
     padding-right: 0;
@@ -98,7 +100,7 @@ $icon-size: 60px;
     background-size: 32px 33px;
   }
 
-  @media (min-width: 768px) {
+  @media (min-width: variables.$tablet-width) {
     display: block;
     margin-bottom: 0;
     padding: 151px 0 57px 0;
