--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -1,14 +1,16 @@
+@use "../variables.scss";
+
 .catalog {
   padding: 27px 20px 35px;
 
-  @media (min-width: 768px) {
+  @media (min-width: variables.$tablet-width) {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     column-gap: 60px;
     padding: 65px 30px 76px;
   }
 
-  @media (min-width: 1440px) {
+  @media (min-width: variables.$desktop-width) {
     grid-template-columns: repeat(4, 1fr);
     column-gap: 80px;
     width: 1220px;
@@ -19,7 +21,7 @@
 }
 
 .catalog__title {
-  @media (min-width: 768px) {
+  @media (min-width: variables.$tablet-width) {
     grid-column: 1 / -1;
   }
 }
@@ -34,7 +36,7 @@
   color: #000000;
   font-weight: 400;
 
-  @media (min-width: 768px) {
+  @media (min-width: variables.$tablet-width) {
     grid-column: 1 / -1;
     margin: 8px 0 80px;
     padding-right: 36px;
@@ -97,7 +99,7 @@
     }
   }
 
-  @media (min-width: 768px) {
+  @media (min-width: variables.$tablet-width) {
     grid-template-columns: 1fr;
     grid-template-rows: repeat(3, auto);
     grid-template-areas:
@@ -130,7 +132,7 @@
     }
   }
 
-  @media (min-width: 1440px) {
+  @media (min-width: variables.$desktop-width) {
     &--additional {
       grid-column: 1 / 4;
       grid-template-areas:
@@ -151,7 +153,7 @@
   justify-self: center;
   align-self: end;
 
-  @media (min-width: 768px) {
+  @media (min-width: variables.$tablet-width) {
     position: absolute;
     top: -73px;
   }
@@ -163,7 +165,7 @@
   color: #222222;
   text-decoration: none;
 
-  @media (min-width: 768px) {
+  @media (min-width: variables.$tablet-width) {
     margin-bottom: 21px;
   }
 }
@@ -171,11 +173,11 @@
 .catalog__product-card--additional .catalog__title-link {
   margin-bottom: 13px;
 
-  @media (min-width: 768px) {
+  @media (min-width: variables.$tablet-width) {
     justify-self: start;
   }
 
-  @media (min-width: 1440px) {
+  @media (min-width: variables.$desktop-width) {
     margin-right: auto;
     margin-bottom: 0;
   }
@@ -191,7 +193,7 @@
   font-weight: 400;
   text-transform: uppercase;
 
-  @media (min-width: 768px) {
+  @media (min-width: variables.$tablet-width) {
     font-size: 20px;
     line-height: 1.2;
     text-align: center;
@@ -206,7 +208,7 @@
   line-height: 1.3em;
   border-collapse: collapse;
 
-  @media (min-width: 768px) {
+  @media (min-width: variables.$tablet-width) {
     margin-bottom: 33px;
     font-size: 16px;
     line-height: 1.4;
@@ -217,7 +219,7 @@
   margin-bottom: 0;
   font-size: 14px;
 
-  @media (min-width: 768px) {
+  @media (min-width: variables.$tablet-width) {
     justify-self: end;
     margin-bottom: 21px;
     margin-left: auto;
@@ -225,7 +227,7 @@
     line-height: 1.4;
   }
 
-  @media (min-width: 1440px) {
+  @media (min-width: variables.$desktop-width) {
     min-width: 286px;
     margin-bottom: 0;
     text-align: left;
@@ -233,13 +235,13 @@
 }
 
 .catalog__product-information tr {
-  @media (min-width: 768px) {
+  @media (min-width: variables.$tablet-width) {
     border-bottom: 1px solid #cdcdcd;
   }
 }
 
 .catalog__product-card--additional tr {
-  @media (min-width: 768px) {
+  @media (min-width: variables.$tablet-width) {
     border-bottom: none;
   }
 }
@@ -256,14 +258,14 @@
 }
 
 .catalog__product-card--additional td {
-  @media (min-width: 768px) {
+  @media (min-width: variables.$tablet-width) {
     min-width: 93px;
   }
 }
 
 .catalog__product-information th,
 .catalog__product-information td {
-  @media (min-width: 768px) {
+  @media (min-width: variables.$tablet-width) {
     padding-top: 2px;
     padding-bottom: 3px;
   }
@@ -273,19 +275,19 @@
   grid-area: button;
   margin-top: 13px;
 
-  @media (min-width: 768px) {
+  @media (min-width: variables.$tablet-width) {
     align-self: end;
     margin-top: auto;
   }
 }
 
 .catalog__additional-goods {
-  @media (min-width: 768px) {
+  @media (min-width: variables.$tablet-width) {
     grid-column: 1 / -1;
     display: grid;
   }
 
-  @media (min-width: 1440px) {
+  @media (min-width: variables.$desktop-width) {
     grid-template-columns: repeat(4, 1fr);
     column-gap: 80px;
     align-content: start;
@@ -306,7 +308,7 @@
     border-bottom: 1px solid #ebebeb;
   }
 
-  @media (min-width: 768px) {
+  @media (min-width: variables.$tablet-width) {
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: repeat(2, auto);
@@ -343,7 +345,7 @@
     background-repeat: no-repeat;
   }
 
-  @media (min-width: 768px) {
+  @media (min-width: variables.$tablet-width) {
     margin-top: 0;
     padding-top: 123px;
 
@@ -362,7 +364,7 @@
   color: #111111;
   text-align: center;
 
-  @media (min-width: 768px) {
+  @media (min-width: variables.$tablet-width) {
     margin-bottom: 23px;
   }
 }
@@ -375,7 +377,7 @@
   line-height: 1.3em;
   text-align: center;
 
-  @media (min-width: 768px) {
+  @media (min-width: variables.$tablet-width) {
     font-size: 16px;
     line-height: 1.2;
   }
@@ -384,7 +386,7 @@
 .catalog__show-all {
   margin-top: 13px;
 
-  @media (min-width: 768px) {
+  @media (min-width: variables.$tablet-width) {
     align-self: grid-end;
     margin-top: auto;
   }
@@ -421,7 +423,7 @@
     background-repeat: no-repeat;
   }
 
-  @media (min-width: 768px) {
+  @media (min-width: variables.$tablet-width) {
     grid-column: 1 / 3;
     width: 707px;
     min-height: 200px;
@@ -443,7 +445,7 @@
     }
   }
 
-  @media (min-width: 1440px) {
+  @media (min-width: variables.$desktop-width) {
     grid-column: -1 / -2;
     grid-row: 2 / 6;
     align-self: start;
