--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -1,3 +1,5 @@
+@use "../variables.scss";
+
 .footer {
   background-color: #f2f2f2;
 }
@@ -5,21 +7,21 @@
 .footer__contacts,
 .footer__wrapper {
   box-sizing: border-box;
-  min-width: 320px;
+  min-width: variables.$mobile-width;
   margin: 0 auto;
 }
 
 .footer__wrapper {
   padding: 0 20px;
 
-  @media (min-width: 768px) {
+  @media (min-width: variables.$tablet-width) {
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 0 30px;
   }
 
-  @media (min-width: 1440px) {
+  @media (min-width: variables.$desktop-width) {
     width: 1440px;
     margin-left: auto;
     margin-right: auto;
@@ -30,7 +32,7 @@
 .footer__logo {
   border-bottom: 1px solid #d9d9d9;
 
-  @media (min-width: 768px) {
+  @media (min-width: variables.$tablet-width) {
     margin-right: 106px;
     border: none;
   }
@@ -41,6 +43,14 @@
   padding-top: 39px;
   padding-bottom: 32px;
   text-align: center;
+
+  &[href]:hover {
+    opacity: 0.8;
+  }
+
+  &[href]:active {
+    opacity: 0.6;
+  }
 }
 
 .footer__social {
@@ -48,7 +58,7 @@
   padding-bottom: 21px;
   border-bottom: 1px solid #d9d9d9;
 
-  @media (min-width: 768px) {
+  @media (min-width: variables.$tablet-width) {
     flex-grow: 1;
     margin-right: 50px;
     border: none;
@@ -59,25 +69,59 @@
   display: grid;
   grid-template-columns: repeat(auto-fit, 28px);
   justify-content: center;
+  align-items: center;
   grid-gap: 24px;
 }
 
+.footer__social-link {
+  &:hover .footer__social-logo path {
+    fill: #68b738;
+  }
+
+  &:active {
+    opacity: 0.3;
+
+    .footer__social-logo path {
+      fill: #68b738;
+    }
+  }
+}
+
 .footer__copyright {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
   padding: 22px 0;
 
-  @media (min-width: 768px) {
-    justify-content: flex-end;
+  @media (min-width: variables.$tablet-width) {
     border: none;
   }
 }
 
-.footer__copyright-title {
-  margin-right: 22px;
+.footer__copyright-link {
+  display: flex;
+  align-items: center;
   color: #444444;
   font-size: 16px;
   line-height: 1.15;
   text-decoration: none;
+
+  &:hover .footer__copyright-logo path {
+    fill: #68b738;
+  }
+
+  &:active {
+    opacity: 0.3;
+
+    &.footer__copyright-logo path {
+      fill: #68b738;
+    }
+  }
+
+  @media (max-width: variables.$mobile-width-max) {
+    justify-content: space-between;
+  }
+}
+
+@media (min-width: variables.$tablet-width) {
+  .footer__copyright-title {
+    margin-right: 22px;
+  }
 }
