--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -1,13 +1,15 @@
+@use "../variables.scss";
+
 .form {
   padding-top: 24px;
   padding-bottom: 32px;
 
-  @media (min-width: 768px) {
+  @media (min-width: variables.$tablet-width) {
     padding-top: 34px;
     padding-bottom: 72px;
   }
 
-  @media (min-width: 1440px) {
+  @media (min-width: variables.$desktop-width) {
     padding-bottom: 82px;
   }
 }
@@ -51,7 +53,7 @@
     margin-bottom: 34px;
   }
 
-  @media (min-width: 768px) {
+  @media (min-width: variables.$tablet-width) {
     &--pet {
       margin-bottom: 72px;
     }
@@ -77,7 +79,7 @@
     }
   }
 
-  @media (min-width: 1440px) {
+  @media (min-width: variables.$desktop-width) {
     &--pet {
       grid-area: pet;
     }
@@ -125,14 +127,14 @@
 }
 
 .form__fieldset--addition .form__list {
-  @media (min-width: 768px) {
+  @media (min-width: variables.$tablet-width) {
     display: grid;
     grid-template-columns: repeat(2, auto);
     gap: 32px 123px;
     justify-content: start;
   }
 
-  @media (min-width: 1440px) {
+  @media (min-width: variables.$desktop-width) {
     display: grid;
     grid-template-columns: repeat(4, 245px);
     gap: 32px 80px;
@@ -141,7 +143,7 @@
 }
 
 .form__fieldset--addition .form__item {
-  @media (min-width: 768px) {
+  @media (min-width: variables.$tablet-width) {
     margin-bottom: 0;
   }
 }
@@ -153,7 +155,7 @@
   font-size: 24px;
   line-height: 1.1;
 
-  @media (min-width: 768px) {
+  @media (min-width: variables.$tablet-width) {
     margin-bottom: 76px;
     font-size: 36px;
     line-height: 1;
@@ -161,7 +163,7 @@
 }
 
 .form__fieldset--addition .form__legend {
-  @media (min-width: 768px) {
+  @media (min-width: variables.$tablet-width) {
     margin-bottom: 57px;
   }
 }
@@ -182,7 +184,7 @@
   line-height: 1.1em;
   text-transform: uppercase;
 
-  @media (min-width: 768px) {
+  @media (min-width: variables.$tablet-width) {
     font-size: 20px;
     line-height: 1.5;
   }
@@ -213,7 +215,7 @@
   padding: 9px 12px 9px 15px;
   border: 1px solid #e7e7e7;
 
-  @media (min-width: 768px) {
+  @media (min-width: variables.$tablet-width) {
     width: 100%;
     min-width: 628px;
     height: 174px;
@@ -226,7 +228,7 @@
   margin-bottom: 21px;
   padding: 13px 45px;
 
-  @media (min-width: 768px) {
+  @media (min-width: variables.$tablet-width) {
     display: inline-block;
     box-sizing: border-box;
     width: 282px;
@@ -235,7 +237,7 @@
     font-size: 20px;
   }
 
-  @media (min-width: 1440px) {
+  @media (min-width: variables.$desktop-width) {
     grid-area: button;
     width: 530px;
     margin-right: 0;
@@ -247,11 +249,11 @@
   color: #000000;
   text-align: center;
 
-  @media (min-width: 768px) {
+  @media (min-width: variables.$tablet-width) {
     display: inline-block;
   }
 
-  @media (min-width: 1440px) {
+  @media (min-width: variables.$desktop-width) {
     grid-area: explanation;
     text-align: left;
   }
