--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -1,15 +1,17 @@
+@use "../variables.scss";
+
 .header {
-  min-width: 320px;
-  font-family: "Oswald", "Arial", sans-serif;
+  min-width: variables.$mobile-width;
+  font-family: variables.$additional-font;
   font-weight: 400;
   color: #000000;
   border-bottom: 1px solid #d9d9d9;
 
-  @media (min-width: 768px) {
+  @media (min-width: variables.$tablet-width) {
     border-bottom: none;
   }
 
-  @media (min-width: 1440px) {
+  @media (min-width: variables.$desktop-width) {
     width: 1220px;
     margin-left: auto;
     margin-right: auto;
@@ -21,7 +23,7 @@
 .header--main {
   border-bottom: none;
 
-  @media (min-width: 1440px) {
+  @media (min-width: variables.$desktop-width) {
     position: relative;
     min-height: 694px;
 
@@ -56,17 +58,17 @@
 }
 
 .header__navigation {
-  @media (max-width: 767px) {
+  @media (max-width: variables.$mobile-width-max) {
     padding-right: 20px;
     padding-left: 20px;
   }
 
-  @media (min-width: 768px) {
+  @media (min-width: variables.$tablet-width) {
     padding-right: 30px;
     padding-left: 30px;
   }
 
-  @media (min-width: 1440px) {
+  @media (min-width: variables.$desktop-width) {
     z-index: 2;
     margin-right: 0;
     margin-left: 0;
@@ -79,7 +81,7 @@
   font-size: 14px;
   line-height: 1;
 
-  @media (max-width: 767px) {
+  @media (max-width: variables.$mobile-width-max) {
     display: grid;
     grid-template-rows: auto auto 135px 135px auto;
     grid-template-columns: 20px auto 20px;
@@ -118,7 +120,7 @@
     }
   }
 
-  @media (min-width: 768px) {
+  @media (min-width: variables.$tablet-width) {
     padding: 62px 30px 526px 117px;
     background-image: url("../img/promo-food-tablet.png");
     background-size: 709px 609px;
@@ -126,7 +128,7 @@
     background-position: bottom 0 right 30px;
   }
 
-  @media (min-width: 1440px) {
+  @media (min-width: variables.$desktop-width) {
     padding: 114px 720px 0 80px;
     background-image: none;
   }
@@ -137,7 +139,7 @@
   line-height: 1em;
   font-weight: 400;
 
-  @media (max-width: 767px) {
+  @media (max-width: variables.$mobile-width-max) {
     grid-row: 1 / 2;
     grid-column: 2 / 3;
     z-index: 3;
@@ -145,7 +147,7 @@
     margin-bottom: 25px;
   }
 
-  @media (min-width: 768px) {
+  @media (min-width: variables.$tablet-width) {
     margin-top: 0;
     margin-bottom: 41px;
     font-size: 60px;
@@ -155,7 +157,7 @@
 .header__promo-tagline {
   text-transform: uppercase;
 
-  @media (max-width: 767px) {
+  @media (max-width: variables.$mobile-width-max) {
     grid-row: 2 / 3;
     grid-column: 2 / 3;
     z-index: 3;
@@ -163,13 +165,13 @@
     margin-bottom: 29px;
   }
 
-  @media (min-width: 768px) {
+  @media (min-width: variables.$tablet-width) {
     margin-bottom: 49px;
     margin-left: 2px;
     font-size: 20px;
   }
 
-  @media (min-width: 1440px) {
+  @media (min-width: variables.$desktop-width) {
     margin-bottom: 52px;
   }
 }
@@ -179,12 +181,12 @@
   font-size: 14px;
   line-height: 1.3;
 
-  @media (max-width: 767px) {
+  @media (max-width: variables.$mobile-width-max) {
     grid-row: -1 / -2;
     grid-column: 2 / 3;
   }
 
-  @media (min-width: 768px) {
+  @media (min-width: variables.$tablet-width) {
     margin-left: 3px;
     padding-top: 14px;
     padding-bottom: 14px;
