--- a/source/sass/blocks/main.scss
+++ b/source/sass/blocks/main.scss
@@ -1,7 +1,9 @@
+@use "../variables.scss";
+
 .main__title {
   margin-top: 0;
   margin-bottom: 37px;
-  font-family: "Oswald", "Arial", sans-serif;
+  font-family: variables.$additional-font;
   color: #000000;
   font-size: 36px;
   line-height: 1em;
@@ -14,31 +16,31 @@
     line-height: 1;
   }
 
-  @media (min-width: 1440px) {
+  @media (min-width: variables.$desktop-width) {
     margin-bottom: 56px;
   }
 }
 
 .main__title-secondary {
   box-sizing: border-box;
-  min-width: 320px;
+  min-width: variables.$mobile-width;
   margin: 0 auto;
   margin-bottom: 40px;
   padding: 0 20px;
-  font-family: "Oswald", "Arial", sans-serif;
+  font-family: variables.$additional-font;
   color: #000000;
   font-size: 36px;
   line-height: 1.1;
   font-weight: 400;
 
-  @media (min-width: 768px) {
+  @media (min-width: variables.$tablet-width) {
     margin-bottom: 32px;
     padding: 0 30px;
     font-size: 60px;
     line-height: 1;
   }
 
-  @media (min-width: 1440px) {
+  @media (min-width: variables.$desktop-width) {
     padding: 0 110px;
   }
 }
@@ -46,11 +48,11 @@
 .main__text {
   margin-top: 0;
   margin-bottom: 15px;
-  font-family: "Oswald", "Arial", sans-serif;
+  font-family: variables.$additional-font;
   color: #000000;
   text-transform: uppercase;
 
-  @media (min-width: 768px) {
+  @media (min-width: variables.$tablet-width) {
     margin-bottom: 32px;
     font-size: 20px;
     line-height: 1.5;
