--- a/source/sass/blocks/page.scss
+++ b/source/sass/blocks/page.scss
@@ -1,6 +1,8 @@
+@use "../variables.scss";
+
 .page {
   height: 100%;
-  min-width: 320px;
+  min-width: variables.$mobile-width;
 }
 
 .page__body {
@@ -14,7 +16,7 @@
   color: #444444;
   background-color: #ffffff;
 
-  @media (min-width: 768px) {
+  @media (min-width: variables.$tablet-width) {
     font-size: 16px;
     line-height: 1.5;
   }
