--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -2,3 +2,10 @@ $mobile-width: 320px;
 $mobile-width-max: 767px;
 $tablet-width: 768px;
 $desktop-width: 1440px;
+
+$mobile-padding: 20px;
+$tablet-padding: 30px;
+$desktop-padding: 110px;
+
+$main-font: "Arial", sans-serif;
+$additional-font: "Oswald", "Arial", sans-serif;
